MDEV-31903 Server crashes in _ma_reset_history upon UNLOCK table with auto-create history partitions